# TaskManager

./: Dockerfile  docker-compose.yml  pyproject.toml
main/migrations/: 0001_initial.py  0002_user_role_task_tag.py
main/models/: __init__.py  tag.py  task.py  user.py
task_manager/: settings.py
